--- a/fastapi-app/Dockerfile
+++ b/fastapi-app/Dockerfile
@@ -1,11 +1,18 @@
 # Python 3.9 베이스 이미지 사용
-FROM python:3.9
+FROM python:3.9-slim
+
+RUN adduser --disabled-password --gecos '' appuser
+USER appuser
+
 
 # 작업 디렉토리 설정
 WORKDIR /app
 
 # 필요한 파일 복사
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
+
 
 # 의존성 설치
 RUN pip install --no-cache-dir -r requirements.txt
